--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.dd24dd96.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.81af9776.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.434f0ade.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ccd4248b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1dbba7e9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d9eab5c8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a915aba2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d6e299c7.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ae259f9e.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.cddf4a48.js">
 	</head>
@@ -35,7 +35,8 @@
 			
 			<script>
 				{
-					__sveltekit_v74zo7 = {
+					__sveltekit_zw8fw4 = {
+						assets: "/matbmp.github.io",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -45,8 +46,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.81af9776.js"),
-						import("./_app/immutable/entry/app.d9eab5c8.js")
+						import("./_app/immutable/entry/start.434f0ade.js"),
+						import("./_app/immutable/entry/app.d6e299c7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
