--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.dd24dd96.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9fa0487f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6768e356.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ccd4248b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bf23595a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.39648577.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ae259f9e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.309fb644.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fce272d4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.570e434d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.cddf4a48.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
+
+
+export const prerender = true;
 
 
 <div><div class="h-16 w-full bg-black absolute text-white flex items-center"><div class="px-4 text-4xl">matbmp</div>
@@ -35,7 +38,7 @@
 			
 			<script>
 				{
-					__sveltekit_12rqou5 = {
+					__sveltekit_1k2x71v = {
 						assets: "/matbmp.github.io",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -46,8 +49,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9fa0487f.js"),
-						import("./_app/immutable/entry/app.39648577.js")
+						import("./_app/immutable/entry/start.6768e356.js"),
+						import("./_app/immutable/entry/app.fce272d4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
