--- a/index.html
+++ b/index.html
@@ -5,40 +5,42 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/0.dd24dd96.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6768e356.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.ccd4248b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.309fb644.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.fce272d4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.570e434d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.cddf4a48.js">
+		<link href="./_app/immutable/assets/0.15324d54.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.1d121e74.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.015ffe8a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.2d683e1e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.dbd6a8e8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.9c813d6d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.b0a7b8b3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.dc77af6b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-export const prerender = true;
+<div>
 
+<div class="h-16 w-full bg-black absolute text-white flex items-center"><div class="px-4 text-4xl">matbmp</div>
+  <div class="italic text-2xl flex items-center text-rose-500">in construction
+  </div>
 
-<div><div class="h-16 w-full bg-black absolute text-white flex items-center"><div class="px-4 text-4xl">matbmp</div>
-    <div class="italic text-2xl flex items-center text-rose-500">in construction</div>
-    <div class="ms-auto px-4 text-xl"><button class="px-4 hover:text-green-400">Projects</button>
-        <button class="px-4 hover:text-green-400">About</button>
-        <button class="px-4 hover:text-green-400">Contact</button></div></div>
+  <nav class="ms-auto px-4 text-xl hidden md:block"><button class="px-4 hover:text-green-400">Projects</button>
+    <button class="px-4 hover:text-green-400">About</button>
+    <button class="px-4 hover:text-green-400">Contact</button></nav>
+  <div class="ms-auto md:hidden"><button class="mx-4">Nav</button></div></div>
 <div class="h-screen flex items-center"><div class="mx-auto w-5/6 lg:w-1/3"><span class="text-4xl">Hi, I am <span class="text-green-400">Mateusz Biernacki</span>,<br>
-			 a student of computer science with interests in
-		</span>
-        <br>
-		<span class="text-2xl"><span class="text-purple-500">web developmnet</span><br>
-			<span class="text-cyan-500">computer graphics</span><br>
-			<span class="text-amber-500">computer vision</span></span></div></div>
-</div>
+      a student of computer science with interests in
+    </span>
+    <br>
+    <span class="text-2xl"><span class="text-purple-500">web developmnet</span><br>
+      <span class="text-cyan-500">computer graphics</span><br>
+      <span class="text-amber-500">computer vision</span></span></div></div></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_1k2x71v = {
+					__sveltekit_2kv8aj = {
 						assets: "/matbmp.github.io",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -49,8 +51,8 @@ export const prerender = true;
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6768e356.js"),
-						import("./_app/immutable/entry/app.fce272d4.js")
+						import("./_app/immutable/entry/start.015ffe8a.js"),
+						import("./_app/immutable/entry/app.9c813d6d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
