--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/0.b67ee69c.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.357f625f.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.904b249e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.43068246.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.9c297a58.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.254bd6dd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0bef51b5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.9bd39619.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.6c94f25a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.33ede43d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.71fb4374.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.401c819c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.c83df0ec.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -20,33 +20,44 @@
 
 <div>
 
-<div class="h-16 w-full bg-black absolute text-white flex items-center"><div class="px-4 text-4xl">matbmp</div>
-  <div class="italic text-2xl flex items-center text-rose-500">in construction
-  </div>
+<div class="h-20 w-full bg-black absolute text-white flex items-center"><div class="px-4 text-4xl">matbmp</div>
+  <a href="https://github.com/matbmp/" class="ms-auto italic px-4 text-2xl flex items-center text-white bg-white/25 rounded-2xl mx-4">Github
+  </a>
 
-  <nav class="ms-auto px-4 text-xl hidden md:block"><button class="px-4 hover:text-green-400">Projects</button>
-    <button class="px-4 hover:text-green-400">About</button>
-    <button class="px-4 hover:text-green-400">Contact</button></nav>
-  <div class="ms-auto md:hidden"><button class="mx-4">Nav</button></div></div>
-<div class="h-screen flex items-center"><div class="mx-auto w-5/6 lg:w-1/3"><span class="text-4xl">Hi, I am <span class="text-green-400">Mateusz Biernacki</span>,<br>
+  <div class="hidden"><nav class="ms-auto px-4 text-xl hidden md:block"><button class="px-4 hover:text-green-400">Projects</button>
+      <button class="px-4 hover:text-green-400">About</button>
+      <button class="px-4 hover:text-green-400">Contact</button></nav>
+    <div class="ms-auto md:hidden"><button class="mx-4">Nav</button></div></div></div>
+<div class="h-screen flex flex-col justify-center"><div class="mx-auto w-5/6 lg:w-1/3 moving-border"><span class="text-4xl">Hi, I am <span class="text-green-400">Mateusz Biernacki</span>,<br>
       a student of computer science with interests in
     </span>
     <br>
     <span class="text-2xl"><span class="text-purple-500">web developmnet</span><br>
       <span class="text-cyan-500">computer graphics</span><br>
-      <span class="text-amber-500">computer vision</span></span></div></div>
+      <span class="text-amber-500">computer vision</span></span>
+    <br>
+    <div class="flex justify-center text-4xl pt-16 font-bold">↓ My projects ↓</div></div></div>
 
-<div class="flex items-center"><div class="mx-auto w-7/8 lg:w-2/3"><a target="_blank" rel="noopener noreferrer" href="https://matbmp.github.io/lumen/"><div class="bg-slate-200 p-4 m-4"><div class="py-4"><span class="text-6xl">Lumen</span>
+<div class="flex items-center"><div class="mx-auto w-7/8 lg:w-2/3"><a target="_blank" rel="noopener noreferrer" href="https://shareitpoland.netlify.app/"><div class="bg-amber-200 p-4 m-4"><div class="py-4"><span class="text-6xl">ShareIt</span>
+          <p class="text-2xl text-slate-700">Simple reddit copycat with accounts, posts, comments, and likes.
+          </p>
+
+          <p class="text-slate-500 text-xl">Created with <span class="text-amber-500 font-bold">Svelte hosted on Netlify</span>
+            and
+            <span class="text-purple-500 font-bold">ASP.NET hosted on Digital Ocean</span></p></div>
+        <img alt="lumen" src="shareit.png"></div></a>
+
+    <a target="_blank" rel="noopener noreferrer" href="https://matbmp.github.io/lumen/"><div class="bg-amber-200 p-4 m-4"><div class="py-4"><span class="text-6xl">Lumen</span>
           <p class="text-2xl text-slate-700">Tiny utility website for creating CSS gradients.
           </p>
-          <p class="text-slate-500">Created with <span class="text-amber-500 font-bold">Svelte</span></p></div>
+          <p class="text-slate-500 text-xl">Created with <span class="text-amber-500 font-bold">Svelte hosted on Github Pages</span></p></div>
         <img alt="lumen" src="lumen.png"></div></a></div></div></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_6h8wl9 = {
+					__sveltekit_fc9s2f = {
 						assets: "/matbmp.github.io",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -57,8 +68,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.904b249e.js"),
-						import("./_app/immutable/entry/app.0bef51b5.js")
+						import("./_app/immutable/entry/start.43068246.js"),
+						import("./_app/immutable/entry/app.71fb4374.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
